--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <title>Frontend Mentor | Tip calculator app</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -46,18 +46,54 @@
 
         <fieldset class="btns">
           <legend class="btns__legend">Select Tip %</legend>
+          <button class="btns__button btns__button--selected">5%</button>
+          <button class="btns__button">10%</button>
+          <button class="btns__button">15%</button>
+          <button class="btns__button">25%</button>
+          <button class="btns__button">50%</button>
+          <input type="number" class="btns__custom" placeholder="Custom" />
         </fieldset>
+
+        <label for="people" class="inputs-selection__people-label"
+          >Number of People <span>"alert"</span></label
+        >
+
+        <input
+          type="number"
+          id="people"
+          class="inputs-selection__people-input"
+          value="5"
+        />
+      </div>
+
+      <div class="result-section">
+        <div class="results">
+          <div>
+            <p class="results__tip-amount">Tip Amount</p>
+            <p class="results__tip-person">/ person</p>
+          </div>
+
+          <p class="results__tip-value">0</p>
+
+          <div>
+            <div class="results__total-amont">Total</div>
+            <div class="results__total-person">/ person</div>
+          </div>
+
+          <p class="results_total-value">0</p>
+        </div>
+
+        <button class="result-section__reset">Reset</button>
       </div>
     </section>
-
-    Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount /
-    person Total / person Reset
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Kerim</a>.
     </div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
