--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p class="results__tip-value">0</p>
 
           <div>
-            <div class="results__total-amont">Total</div>
+            <div class="results__total-amount">Total</div>
             <div class="results__total-person">/ person</div>
           </div>
 
