--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Kerim</a>.
     </div>
-    <script src="./main.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
